--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
   /* Hero Section */
   
   #Hero-Section {
-    background-image: url("../img/bg\ hero.jpg");
+    background-image: url("../img/bg\ foto.jpg");
     height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
